[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Others.gd" type="Script" id=1]
[ext_resource path="res://imgs/texts/HamletOrNot.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[node name="Power_Ups" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -520.0
margin_top = -320.0
margin_right = 520.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 0.784314 )

[node name="box" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -440.0
margin_top = -140.0
margin_right = 432.0
margin_bottom = 167.0
custom_constants/separation = 5
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="box"]
margin_left = 11.0
margin_right = 332.0
margin_bottom = 307.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="box/VBoxContainer"]
margin_top = 74.0
margin_right = 321.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "Possession Time"
align = 1

[node name="Label2" type="Label" parent="box/VBoxContainer"]
margin_top = 163.0
margin_right = 321.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 1 )
text = "Max Guardians"
align = 1

[node name="Label3" type="Label" parent="box/VBoxContainer"]
visible = false
margin_top = 208.0
margin_right = 321.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 1 )
text = "Stamina"

[node name="buttons" type="VBoxContainer" parent="box"]
margin_left = 337.0
margin_right = 380.0
margin_bottom = 307.0
custom_constants/separation = 20
alignment = 1

[node name="possession_time" type="Button" parent="box/buttons"]
margin_top = 68.0
margin_right = 43.0
margin_bottom = 143.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0.164706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.454902, 0.454902, 0.454902, 1 )
text = "+"
flat = true

[node name="max_guardians" type="Button" parent="box/buttons"]
margin_top = 163.0
margin_right = 43.0
margin_bottom = 238.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0.164706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.454902, 0.454902, 0.454902, 1 )
text = "+"
flat = true

[node name="stamina" type="Button" parent="box/buttons"]
visible = false
margin_top = 211.0
margin_right = 43.0
margin_bottom = 286.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0.164706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.454902, 0.454902, 0.454902, 1 )
text = "+"
flat = true

[node name="VSeparator" type="VSeparator" parent="box"]
margin_left = 385.0
margin_right = 445.0
margin_bottom = 307.0
rect_min_size = Vector2( 60, 0 )
custom_styles/separator = SubResource( 2 )

[node name="current" type="VBoxContainer" parent="box"]
margin_left = 450.0
margin_right = 504.0
margin_bottom = 307.0
custom_constants/separation = 20
alignment = 1

[node name="possession_time" type="Label" parent="box/current"]
margin_top = 74.0
margin_right = 54.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="max_guardians" type="Label" parent="box/current"]
margin_top = 163.0
margin_right = 54.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 1 )
text = "160"

[node name="stamina" type="Label" parent="box/current"]
visible = false
margin_top = 208.0
margin_right = 54.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="arrows" type="VBoxContainer" parent="box"]
margin_left = 509.0
margin_right = 545.0
margin_bottom = 307.0
custom_constants/separation = 20
alignment = 1

[node name="power" type="Label" parent="box/arrows"]
margin_top = 74.0
margin_right = 36.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "->"

[node name="speed" type="Label" parent="box/arrows"]
margin_top = 163.0
margin_right = 36.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 1 )
text = "->"

[node name="stamina" type="Label" parent="box/arrows"]
visible = false
margin_top = 208.0
margin_right = 36.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 1 )
text = "->"

[node name="next" type="VBoxContainer" parent="box"]
modulate = Color( 1, 0.0705882, 0.223529, 1 )
margin_left = 550.0
margin_right = 604.0
margin_bottom = 307.0
custom_constants/separation = 20
alignment = 1

[node name="possession_time" type="Label" parent="box/next"]
margin_top = 74.0
margin_right = 54.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="max_guardians" type="Label" parent="box/next"]
margin_top = 163.0
margin_right = 54.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 1 )
text = "160"

[node name="stamina" type="Label" parent="box/next"]
visible = false
margin_top = 208.0
margin_right = 54.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="VSeparator2" type="VSeparator" parent="box"]
margin_left = 609.0
margin_right = 669.0
margin_bottom = 307.0
rect_min_size = Vector2( 60, 0 )
custom_styles/separator = SubResource( 2 )

[node name="price" type="VBoxContainer" parent="box"]
margin_left = 674.0
margin_right = 736.0
margin_bottom = 307.0
custom_constants/separation = 20
alignment = 1

[node name="possession_time" type="Label" parent="box/price"]
margin_top = 74.0
margin_right = 62.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="max_guardians" type="Label" parent="box/price"]
margin_top = 163.0
margin_right = 62.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 1 )
text = "200"

[node name="stamina" type="Label" parent="box/price"]
visible = false
margin_top = 208.0
margin_right = 66.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 1 )
text = "400"

[node name="prices2" type="VBoxContainer" parent="box"]
margin_left = 741.0
margin_right = 861.0
margin_bottom = 307.0
custom_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="box/prices2"]
margin_top = 85.0
margin_right = 120.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 3 )
text = "sacrifices"
valign = 1

[node name="Label2" type="Label" parent="box/prices2"]
margin_top = 173.0
margin_right = 120.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 3 )
text = "sacrifices"

[node name="Label3" type="Label" parent="box/prices2"]
visible = false
margin_top = 237.0
margin_right = 138.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 3 )
text = "fragments"

[node name="Label" type="Label" parent="."]
margin_left = 550.0
margin_top = 290.0
margin_right = 764.0
margin_bottom = 373.0
custom_fonts/font = SubResource( 1 )
text = "Abilities"
align = 1

[node name="Label3" type="Label" parent="."]
margin_left = 870.0
margin_top = 290.0
margin_right = 1062.0
margin_bottom = 373.0
custom_fonts/font = SubResource( 1 )
text = "Level"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 1210.0
margin_top = 290.0
margin_right = 1326.0
margin_bottom = 373.0
custom_fonts/font = SubResource( 1 )
text = "Price"
align = 1

[node name="fragments" type="Label" parent="."]
margin_left = 560.0
margin_top = 770.0
margin_right = 1370.0
margin_bottom = 818.0
custom_fonts/font = SubResource( 3 )
text = "Humans possessed:"
align = 1

[node name="Button" type="Button" parent="."]
margin_left = 450.0
margin_top = 790.0
margin_right = 538.0
margin_bottom = 851.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 0.627451 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Back"
flat = true

[connection signal="pressed" from="box/buttons/possession_time" to="." method="_on_possession_time_pressed"]
[connection signal="pressed" from="box/buttons/max_guardians" to="." method="_on_max_guardians_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
